2005-01-27  Adam Sampson  <azz@us-lot.org>

	* onenetd.c: Update the list of connected clients correctly;
	previously clients weren't being added to the list at all, so
	memory would be leaked if the refusal message wasn't accepted
	immediately, and the child FD would be closed immediately
	anyway.

2003-06-17  Adam Sampson  <azz@us-lot.org>

	* onenetd.c: Set fd options correctly (required for Solaris).
	Fix copyright notices. Block SIGCHLD except while select() is running.
	Use a self-pipe again, since the other way is not correct (it leaves
	zombies if the handler gets called early enough). Use FD_CLOEXEC to
	avoid leaking fds.  Various cleanups.

	* configure.ac: Checked into CVS, and renamed this file for the new
	standards.

2002-12-29  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Made all the errors that can occur in the main loop
	non-fatal.

2002-08-06  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Removed obsolete -o and -d from getopt args. Added -e to
	redirect stderr of child to socket.
	* onenetd.1: Wrote manual page.

2002-08-05  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Fixed bug where onenetd wouldn't accept any connections
	after it had ever been full (calculating "full" in the wrong place).
	Made the disconnect message show the connection count after
	disconnection (since it's a bit more obvious then how much clients are
	actually connected from the log).

2002-06-03  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Avoid selecting on the listening socket when
	full. Split out the "send response" code, so that we can call it
	when we first notice a socket needs a response (which saves on the
	calls to select()). Made the status messages include the number of
	children running.

2002-05-31  Adam Sampson  <azz@gnu.org>

	* onenetd.c: Removed redundant test for host being "0" (since
	inet_addr handles this case already). Changed uid and gid to
	longs, since uid_t and gid_t aren't signed under dietlibc. Made